<resources>

    <string name="app_name">Vshop</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_orders">Orders</string>
    <string name="menu_accounts">Accounts</string>
    <string name="communicate">Communicate</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_create_order">CreateOrderActivity</string>
    <string name="next">Next</string>
    <string name="create_order">Create order</string>
    <string name="pending_balance">Total Pending Balance</string>
    <string name="pending_orders">Pending orders</string>
    <string name="title">Title</string>
    <string name="silver">Silver</string>
    <string name="gold">Gold</string>
    <string name="action_backup">BAckup</string>
    <string name="action_restore">Restore</string>
</resources>
