<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/menu_dashboard" />
        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/ic_list"
            android:title="@string/menu_orders" />
        <item
            android:id="@+id/nav_accounts"
            android:icon="@drawable/ic_account_balance"
            android:title="@string/menu_accounts" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_tools"
            android:title="@string/menu_tools" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share"
                android:title="@string/menu_share"
                android:checked="true"/>
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_send"
                android:title="@string/menu_send"
                android:checked="true"/>
        </menu>
    </item>

</menu>
